Revert "attempt at creating and deleting users dynamically"
This reverts commit 0a7c2d6c4887d32272d803c12fd405d3066f3e72.